style: 💇‍♀️ (*) コードの整形
prettierでコードスタイルを整形

--- a/mocksite/works.html
+++ b/mocksite/works.html
@@ -1,44 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>施工実績 | モックサイト</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>施工実績 | モックサイト</title>
-</head>
-
-<body>
-  <header>
-    <nav aria-label="ヘッダーナビ">
-      <a href="./">ホーム</a>
-      <a href="./about.html">会社概要</a>
-      <a href="./services.html">事業内容</a>
-      <a href="./works.html">施工実績</a>
-      <a href="./contact.html">お問い合わせ</a>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <h1>施工実績</h1>
-    </section>
-    <section>
-      <h2>イメージ</h2>
-      <ul>
-        <li><img src="./img/works1.jpg" alt="施工実績1" /></li>
-        <li><img src="./img/works2.jpg" alt="施工実績2" /></li>
-        <li><img src="./img/works3.jpg" alt="施工実績3" /></li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <nav aria-label="フッターナビ">
-      <a href="./">ホーム</a>
-      <a href="./about.html">会社概要</a>
-      <a href="./services.html">事業内容</a>
-      <a href="./works.html">施工実績</a>
-      <a href="./contact.html">お問い合わせ</a>
-    </nav>
-  </footer>
-</body>
-
+  <body>
+    <header>
+      <nav aria-label="ヘッダーナビ">
+        <a href="./">ホーム</a>
+        <a href="./about.html">会社概要</a>
+        <a href="./services.html">事業内容</a>
+        <a href="./works.html">施工実績</a>
+        <a href="./contact.html">お問い合わせ</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>施工実績</h1>
+      </section>
+      <section>
+        <h2>イメージ</h2>
+        <ul>
+          <li><img src="./img/works1.jpg" alt="施工実績1" /></li>
+          <li><img src="./img/works2.jpg" alt="施工実績2" /></li>
+          <li><img src="./img/works3.jpg" alt="施工実績3" /></li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <nav aria-label="フッターナビ">
+        <a href="./">ホーム</a>
+        <a href="./about.html">会社概要</a>
+        <a href="./services.html">事業内容</a>
+        <a href="./works.html">施工実績</a>
+        <a href="./contact.html">お問い合わせ</a>
+      </nav>
+    </footer>
+  </body>
 </html>
